syntax = "proto3";

option go_package = "api/proto/auth";
package auth;

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string refreshToken = 2;
}

message RegisterRequest {
    string email = 1;
    string fullname = 2;
    string password = 3;
    string birthdate = 4;
    string gender = 5;
    string address = 6;
    int32 id_mbti = 7;
    int32 id_job_position = 8;
}

message RegisterResponse {
    string userId = 1;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (LoginResponse);
}